# scyseqtools

./: .gitignore  README.md  algorigramme.odg  notes.md  pyproject.toml
.github/workflows/: build-analyser.yml  build-apps.yml  build-encoder.yml  pages.yml  publish-pypi.yml
codix/: algorigramme.odg
codix-analyzer/: symbolix.py
codix-encoder/: __init__.py  analix.py  encoder  htmlreport.py  ib.py  methods.py  parameters.py  serve_symbolix.py  start_local  start_local.py  utils.py
codix/codix-analyzer/: analix.py  methods.py  myladon.py  parameters.py  symbolix.py  utils.py
codix/codix-encoder/: applicationmenu.py  codingframe.old  codingframe.py  config.ini  cwdfile.ini  encoder  htmlreport.py  infoframe.old  infoframe.py  newcode.old  newcode.py  playercontrol.old  playercontrol.py  truecodix.py  utils.py
codix/utils/: fake_data.py
docs/: player_states.ods
docs/source/: codedoc.rst  conf.py  devel.md  devguide.rst  flowcharts.rst  index.rst  todo.md  todo.rst  userguide.rst
docs/source/_static/: analyser_workflow.mmd  encoder_workflow.mmd  fig1.mmd
manuscript/: apa7-config.yaml  biblio.bib  codix_paper.md  sn-template.tex
packaging/pyinstaller/: scyseq-analyser-linux.spec  scyseq-analyser-macos.spec  scyseq-analyser-windows.spec  scyseq-encoder-linux.spec  scyseq-encoder-macos.spec  scyseq-encoder-windows.spec
src/analyser/: .gitignore  __init__.py  analix.py  analyser  analyzer  methods.py  parameters.py  symbolix.py
src/codix/analyser/: analyser.py  main.py  methods.py  parameters.py  symbolix.py
src/codix/encoder/: applicationmenu.py  codingframe.py  config.ini  config.py  cwdfile.ini  encoder.py  infoframe.py  main.py  newcode.py  playerbackends.py  playercontrol.py  utils.py
src/encoder/: codingframe.py  config.ini  cwdfile.ini  encoder  encoder.py  newcode.py  playercontrol.py  test-vlc.py  truecodix.py
src/scyseqtools/analyser/: analyser.py  kappa.py  main.py  methods.py  parameters.py  symbolix.py  synchronization.py
src/scyseqtools/encoder/: applicationmenu.py  codingframe.py  config.py  encoder.py  infoframe.py  main.py  newcode.py  playerbackends.py  playercontrol.py  utils.py
stage_lp/: notes.md  technique.md  todo.md  tools.md
tests/: test_analyser_gui.py  test_encoder_config.py  test_encoder_resume.py  test_playerbackends.py  test_playercontrol.py
