[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codix"
version = "0.1.0"
description = "Codix is a suite of softwares: encoder and analyser"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

dependencies = [
 # "scyseq @ file://../../scyseq",  # local scyseq for now
  "python-vlc", "numpy", "Pmw", "pymediainfo"
]


[project.optional-dependencies]
dev = ["pytest"]
docs = ["sphinx", "myst-parser", "sphinxcontrib-bibtex", "sphinxcontrib-mermaid"]

[tool.hatch.build.targets.wheel]
packages = ["src/analyser", "src/encoder"]

[tool.hatch.envs.default]
features = ["dev", "docs"]

#[tool.hatch.build.targets.wheel]
#packages = ["src/encoder", "src/analyser"]


[tool.hatch.metadata]
allow-direct-references = true
#name = "mon-appli"
#version = "0.1.0"


#[tool.hatch.envs]
## Configuration de l'environnement de développement (facultatif)
#default = { dependencies = ["malib"] }
#
#[tool.hatch.scripts]
## Si tu as des scripts que l'utilisateur peut lancer directement avec `hatch run`
#start-appli1 = "src.appli1.main:main"  # Exemple, change selon ta structure
#start-appli2 = "src.appli2.main:main"  # Exemple, change selon ta structure


