[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "scyseqtools"
# version number is dynamically retrieved from Git tags by hatch-vcs
dynamic = ["version"]
description = "ScySeqTools is a suite of software: encoder and analyser"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

dependencies = [
  "scyseq",
  "python-vlc",
  "numpy",
  "Pmw",
  "pymediainfo",
  "platformdirs"
]

[project.optional-dependencies]
dev = ["pytest"]
build = ["pyinstaller"]
docs = ["sphinx", "myst-parser", "sphinxcontrib-bibtex", "sphinxcontrib-mermaid"]
mpv = ["mpv"]

[project.scripts]
scyseq-analyser = "scyseqtools.analyser.main:main"
scyseq-encoder = "scyseqtools.encoder.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/scyseqtools"]
force-include = { "src/scyseqtools/encoder/config.ini" = "scyseqtools/encoder/config.ini" }

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/scyseqtools/_version.py"

[tool.hatch.envs.default]
features = ["dev", "docs", "build"]

[tool.hatch.envs.docs]
features = ["docs"]


[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.envs.docs.scripts]
build = "python -m sphinx -b html docs/source docs/build/html"
